# AnalystLab_Internship

./: .gitignore  README.md  pyproject.toml
Week_1/docs/: Summary_report.md  Task.txt
Week_1/notebooks/: shows.ipynb  transact.ipynb
Week_2/docs/: Summary_report.md  task.md
Week_2/notebooks/: cleaning.ipynb
Week_3/: data_load.ipynb
Week_3/docs/: week_3_review.md
Week_3/scripts/: chinook.py  connect.py  data_load.ipynb  explore.py  queries.sql  sales.sql
Week_4/: objectives.md
Week_4/data/: superstore_dashboard.pbix
Week_4/docs/: Superstore_Sales_Analysis.pptx  objectives.md
Week_4/scripts/: data_fetcher.py
Week_5/data/: Telco analysis.pbix
Week_5/docs/: Telco_Churn_Analysis_Presentation.pptx  Telco_Churn_Analysis_Report.docx  review.md
Week_5/scripts/: fetcher.py
Week_6/docs/: Aapl exploration summary.md
Week_6/scripts/: exploration.ipynb
Week_7/docs/: Real-Time Weather ETL Pipeline.md
Week_7/scripts/: clean_weather.py  fetch_weather.py  main.py  store_weather.py
