[project]
name = "analystlab-internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=7.4.3",
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "kagglehub>=1.0.2",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
]
