[project]
name = "analystlab-internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=7.4.3",
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "kagglehub>=1.0.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "matplotlib>=3.11.0",
    "psycopg2-binary>=2.9.12",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "yfinance>=1.5.1",
]
